<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/homeFragment">
    <fragment android:id="@+id/homeFragment" android:name="com.sidineyr.callguide.FirstFragment"
        android:label="@string/home_label" tools:layout="@layout/fragment_first">
        <action android:id="@+id/action_home_to_practice" app:destination="@id/practiceFragment" />
        <action android:id="@+id/action_home_to_guide" app:destination="@id/guideFragment" />
    </fragment>
    <fragment android:id="@+id/practiceFragment" android:name="com.sidineyr.callguide.SecondFragment"
        android:label="@string/practice_label" tools:layout="@layout/fragment_second" />
    <fragment android:id="@+id/guideFragment" android:name="com.sidineyr.callguide.ThirdFragment"
        android:label="@string/guide_label" tools:layout="@layout/fragment_third" />
</navigation>
